# wikipedia-html-extractor

./: .gitignore  Cargo.toml  README.md
src/: ensure_nested.rs  extract.rs  extract_files.rs  index.rs  main.rs
src/extract/: files.rs  sql.rs
src/main/: ensure_nested.rs
