[package]
name = "wikipedia-html-extractor"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Used for threads
crossbeam = "0.8"
# Errors
anyhow = "1"
thiserror = "1"
# CLI
clap = { version = "3.1", features = ["derive", "cargo"] }
# SQL
rusqlite = "0.27"
# Compression
zstd = "0.11"

[profile.release]
lto = "thin"
